k8s/Api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nginx-namespace  # Ensure the frontend service is in the same namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: NodePort


---


apiVersion: v1
kind: Service
metadata:
  name: nginx-api-gateway
  namespace: nginx-namespace
spec:
  type: LoadBalancer
  ports:
    - port: 8000          # HTTP port
      targetPort: 8000    # Port on the NGINX container
  selector:
    app: nginx-api-gateway


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-api-gateway
  namespace: nginx-namespace
spec:
  replicas: 1  # Initial number of replicas
  selector:
    matchLabels:
      app: nginx-api-gateway
  template:
    metadata:
      labels:
        app: nginx-api-gateway
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
