k8s/canvis-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canvas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canvas-api
  template:
    metadata:
      labels:
        app: canvas-api
    spec:
      containers:
      - name: canvas-api
        image: canvas-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 6969
---
apiVersion: v1
kind: Service
metadata:
  name: canvas-api
spec:
  selector:
    app: canvas-api
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
