k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: nginx-namespace  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002  # Frontend app port
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nginx-namespace  # Specify the namespace here
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3002          # Expose service on port 3002
      targetPort: 3002    # Target container port
