k8s/gloo_config.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: app-virtual-service
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
        - prefix: /api/auth
        routeAction:
          single:
            upstream:
              name: default-auth-service-3000
              namespace: gloo-system
      - matchers:
        - prefix: /api/canvas
        routeAction:
          single:
            upstream:
              name: default-canvas-api-6969
              namespace: gloo-system
      - matchers:
        - prefix: /
        routeAction:
          single:
            upstream:
              name: default-frontend-3002
              namespace: gloo-system
